--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -17,6 +17,16 @@
   color: #eb0f5d;
   margin-top: 10px;
   font-size: 18px;
+  font-weight: 600;
   border: none;
   background-color: transparent;
+  transition: 0.3s !important;
+  -webkit-transition: 0.3s !important;
+  -moz-transition: 0.3s !important;
+  -ms-transition: 0.3s !important;
+  -o-transition: 0.3s !important;
+}
+
+.banner-btn:hover span {
+  margin-left: 5px;
 }
