--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -1,7 +1,7 @@
 .product-img-size {
-    height: 440px;
-    width: 100%;
+    height: 440px !important;
+    width: 100% !important;
 }
 .card-height {
-    height: 10rem;
+    height: 8rem;
 }
